--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
   <link href="//cdn.muicss.com/mui-0.9.39/css/mui.min.css?v=1" rel="stylesheet" type="text/css" />
   <script src="//cdn.muicss.com/mui-0.9.39/js/mui.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,15 +26,6 @@
     gtag('config', 'UA-120210656-1');
   </script>
 
-
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-120210656-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-120210656-1');
-  </script>
   <title>M8 Name Validator</title>
 </head>
 
